tests/out/error/method/param_redefine.in.bt
struct Foo{}

fun (rec Foo) method(rec i32) {}
