tests/out/error/method/param_redefine.out
tests/out/error/method/param_redefine.in.bt:3:21 error: redefinition of rec
